 - gui: added set_cursor_position()/get_cursor_position() to edit_box
 - gui: added clear_history() to edit_box
 - gui: added clipboard support to edit_box
 - gui: added automatic un-focus of edit_box when clicking outside of the box
 - gui: added vertex_cache to speed up text rendering (only available with OpenGL renderer)
 - gui: improved peformance of "update borders" notifications
 - gui: fixed rare crash in edit_box
 - gui: fixed crash when calling Lua delete_frame() twice on same frame
 - gui: fixed Lua get_width()/get_height() returning incorrect values
 - gui: fixed crash when currently hovered/focussed frame is deleted
 - gui: fixed virtual gui::scroll_frame not able to be inherited from
 - gui: fixed frame OnSizeChanged not always triggered
 - gui: fixed text coloring not working when applied to first character of a manual new line
 - gui: fixed up/down keys for single-line edit_box just moving the cursor and not using history
 - gui: fixed left/right keys not moving the carret as expected when text is selected in edit_box
 - gui: fixed crash when inherited child's name is already taken
 - gui: fixed incorrect handling of optional parameter in Frame:enable_mouse() lua function
 - gui: fixed Frame:get_script() always returning nil
 - gui: fixed edit_box stealing mouse click events from other frames
 - gui: fixed edit_box carret appearing after set_text() even if the box is not focussed
 - gui: fixed edit_box getting stuck when pressing Backspace to delete all partially-displayed text
 - gui: fixed FontString:set_font() outline flags not handled correctly
 - gui: fixed edit_box numeric-only mode not accepting input correctly
 - gui: fixed scroll_frame not propagating all size updates to its scroll child
 - gui: fixed is_visible() for layered_regions always returning false
 - gui: fixed hovered frame not updated when hide/show is called
 - xml: now parsing standard XML comments

v1.2.0:
 - added support for MSVC 2010
 - gui: added the quad2<T> type