@@ -74,6 +74,7 @@ Other changes:
  - gui: added automatic un-focus of edit_box when clicking outside of the box
  - gui: added vertex_cache to speed up text rendering (only available with OpenGL renderer)
  - gui: improved peformance of "update borders" notifications
+ - gui: improved peformance of generating new object IDs
  - gui: fixed rare crash in edit_box
  - gui: fixed crash when calling Lua delete_frame() twice on same frame
  - gui: fixed Lua get_width()/get_height() returning incorrect values
